tests/snapshots/compiler_error_fixtures/named_field_pun_unbound_e466.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/named_field_pun_unbound_e466.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `x`.

  examples/compiler_errors/named_field_pun_unbound_e466.flx:14:21
   |
14 |     let p = Point { x, y }
   |                     ^

Hint:
  Define it first: let x = ...;

Help:
  Did you mean one of: `p`, `y`?


error[E466]: Punned Field Not In Scope

No variable named `x` is in scope for punning.

  examples/compiler_errors/named_field_pun_unbound_e466.flx:14:21
   |
14 |     let p = Point { x, y }
   |                     ^

Found 2 errors.
== stdout ==
<not executed>
